--- a/github.html
+++ b/github.html
@@ -606,17 +606,19 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <li class="chapter" data-level="29" data-path="github.html"><a href="github.html"><i class="fa fa-check"></i><b>29</b> GitHub/Git Resources</a><ul>
 <li class="chapter" data-level="29.1" data-path="github.html"><a href="github.html#overview-23"><i class="fa fa-check"></i><b>29.1</b> Overview</a></li>
 <li class="chapter" data-level="29.2" data-path="github.html"><a href="github.html#first-things-first"><i class="fa fa-check"></i><b>29.2</b> First things first</a></li>
-<li class="chapter" data-level="29.3" data-path="github.html"><a href="github.html#the-no-branch-workflow-a.k.a-master-to-master"><i class="fa fa-check"></i><b>29.3</b> The no branch workflow, a.k.a master-to-master</a></li>
-<li class="chapter" data-level="29.4" data-path="github.html"><a href="github.html#branching"><i class="fa fa-check"></i><b>29.4</b> Branching</a><ul>
+<li class="chapter" data-level="29.3" data-path="github.html"><a href="github.html#the-no-branch-workflow"><i class="fa fa-check"></i><b>29.3</b> The no branch workflow</a></li>
+<li class="chapter" data-level="29.4" data-path="github.html"><a href="github.html#branching-your-repo"><i class="fa fa-check"></i><b>29.4</b> Branching: your repo</a></li>
+<li class="chapter" data-level="29.5" data-path="github.html"><a href="github.html#branching-someone-elses-repo"><i class="fa fa-check"></i><b>29.5</b> Branching: someone else’s repo</a><ul>
 <li class="chapter" data-level="" data-path="github.html"><a href="github.html#step-1-fork-the-upstream-repo-once"><i class="fa fa-check"></i>Step 1: Fork the upstream repo (once)</a></li>
 <li class="chapter" data-level="" data-path="github.html"><a href="github.html#step-2-clone-origin-and-create-a-local-repository-once"><i class="fa fa-check"></i>Step 2: Clone origin and create a local repository (once)</a></li>
 <li class="chapter" data-level="" data-path="github.html"><a href="github.html#step-3-configure-remote-that-points-to-the-upstream-repository-once"><i class="fa fa-check"></i>Step 3: Configure remote that points to the upstream repository (once)</a></li>
 <li class="chapter" data-level="" data-path="github.html"><a href="github.html#step-4-pull"><i class="fa fa-check"></i>Step 4: Pull</a></li>
 <li class="chapter" data-level="" data-path="github.html"><a href="github.html#step-5-work-commit-and-push"><i class="fa fa-check"></i>Step 5: Work, commit and push</a></li>
 <li class="chapter" data-level="" data-path="github.html"><a href="github.html#step-6-submit-a-pull-request"><i class="fa fa-check"></i>Step 6: Submit a pull request</a></li>
-<li class="chapter" data-level="" data-path="github.html"><a href="github.html#last-step-sync-local-master-with-upstream-master"><i class="fa fa-check"></i>Last Step: Sync local master with upstream master</a></li>
+<li class="chapter" data-level="" data-path="github.html"><a href="github.html#step-7-delete-the-branch"><i class="fa fa-check"></i>Step 7: Delete the branch</a></li>
+<li class="chapter" data-level="29.5.1" data-path="github.html"><a href="github.html#step-8-sync-your-fork"><i class="fa fa-check"></i><b>29.5.1</b> Step 8: Sync your fork</a></li>
 </ul></li>
-<li class="chapter" data-level="29.5" data-path="github.html"><a href="github.html#other-resources"><i class="fa fa-check"></i><b>29.5</b> Other resources</a><ul>
+<li class="chapter" data-level="29.6" data-path="github.html"><a href="github.html#other-resources"><i class="fa fa-check"></i><b>29.6</b> Other resources</a><ul>
 <li class="chapter" data-level="" data-path="github.html"><a href="github.html#getting-help-1"><i class="fa fa-check"></i>Getting Help</a></li>
 <li class="chapter" data-level="" data-path="github.html"><a href="github.html#branching-out"><i class="fa fa-check"></i>Branching out</a></li>
 <li class="chapter" data-level="" data-path="github.html"><a href="github.html#more-resources-1"><i class="fa fa-check"></i>More Resources</a></li>
@@ -705,7 +707,7 @@ function unhover(element) {
 <p><img src="images/banners/banner_github.png" /></p>
 <div id="overview-23" class="section level2">
 <h2><span class="header-section-number">29.1</span> Overview</h2>
-<p>This section describes workflows for working with GitHub/Git and advice on how to collaborate in teams on large coding projects. If you’re interested in learning how to propose changes to <a href="edav.info" class="uri">edav.info</a> (or any other repo) without leaving github.com, see our <a href="contributing.html">Contributing</a> chapter.</p>
+<p>This section describes workflows for working with GitHub/Git and advice on how to collaborate in teams on large coding projects. If you’re interested in learning how to propose changes to <a href="edav.info" class="uri">edav.info</a> (or any other repo) without leaving github.com, see our <a href="contribute.html">Contributing to this Resource</a> chapter.</p>
 <p>Ok, not satisfied with fixing typos on GitHub? Ready to work locally and move code back and forth between your repositories (or someone else’s) and your machine? For that you’ll need Git, a widely used version control system. It is super useful and powerful, but people also find it quite annoying and <a href="https://xkcd.com/1597/" target="_blank">difficult to understand</a>. Rather than trying to master the whole system, we suggest beginning with some basic workflows, as outlined below. You can derive great benefits from it without being an expert (trust me, I know!)</p>
 </div>
 <div id="first-things-first" class="section level2">
@@ -716,10 +718,10 @@ function unhover(element) {
 <li><p>(Optional) <em>Make sure that you can pull from and push to GitHub from your computer</em> <a href="https://happygitwithr.com/push-pull-github.html" target="_blank">Connect to GitHub</a></p></li>
 </ol>
 </div>
-<div id="the-no-branch-workflow-a.k.a-master-to-master" class="section level2">
-<h2><span class="header-section-number">29.3</span> The no branch workflow, a.k.a master-to-master</h2>
+<div id="the-no-branch-workflow" class="section level2">
+<h2><span class="header-section-number">29.3</span> The no branch workflow</h2>
 <p>To get comfortable with Git, start with this basic workflow in which you will be pulling from and pushing to <em>your</em> repo on GitHub. Just you, no collaboration:</p>
-<p><img src="/images/git/no-branch.png" /></p>
+<p><img src="images/git/no-branch.png" /></p>
 <p>The <a href="https://happygitwithr.com/rstudio-git-github.html" target="_blank">Connect RStudio to Git and GitHub</a> chapter of <em>Happy Git</em> will get you set up: you will create a repo on GitHub, clone the repo into an RStudio project, and practice making changes.</p>
 <p>Once you’re set up, your local workflow will be <strong>pull, work, commit/push</strong>.</p>
 <p><strong>PULL</strong> Each time you open RStudio and switch to the project, you will pull down any changes made to the repo on GitHub by clicking the <strong>Down Arrow</strong> in the Git pane of RStudio. You may think that no changes have been made to GitHub and there’s nothing to pull, but you may forget the typos that you fixed online, so it’s good practice to always start by pulling changes just in case.</p>
@@ -728,13 +730,17 @@ function unhover(element) {
 <p>The next step is to click the <strong>Commit</strong> button and enter a commit message that meaningful describes what was done. Finally clicking the <strong>Up Arrow</strong> will send the commit to GitHub.</p>
 <p>It’s not considered good practice to commit too often, but as a beginner, it’s useful to do so to learn how it all works.</p>
 </div>
-<div id="branching" class="section level2">
-<h2><span class="header-section-number">29.4</span> Branching</h2>
-<p>Once you’ve comfortable with the workflow described above, you’re ready to start branching. The process is quite similar whether you’re working on your own repo or someone else’s. If it’s <em>your</em> repo, you can skip Steps 1 and 3.</p>
+<div id="branching-your-repo" class="section level2">
+<h2><span class="header-section-number">29.4</span> Branching: your repo</h2>
+<p>Once you’ve comfortable with the workflow described above, you’re ready to start branching. The process is quite similar whether you’re working on your own repo or someone else’s.</p>
+<p>If it’s <em>your</em> repo, you can follow the steps in <a href="https://github.com/jtr13/EDAV/blob/master/pdfs/BranchingYourRepo.pdf" target="_blank">these slides</a>, which provide step-by-step detail on creating a branch, doing work on the branch and then submitting a pull request to merge the changes into origin/master. Or you can follow the steps below, skipping steps 1 and 3.</p>
+</div>
+<div id="branching-someone-elses-repo" class="section level2">
+<h2><span class="header-section-number">29.5</span> Branching: someone else’s repo</h2>
 <div id="step-1-fork-the-upstream-repo-once" class="section level3 unnumbered">
 <h3>Step 1: Fork the upstream repo (once)</h3>
 <p><em>Skip this step if you’re syncing with your own repo.</em></p>
-<p>Let’s say you want to contribute to EDAV! Fork <a href="https://github.com/jtr13/EDAV" target="_blank">our GitHub repo</a> and then on your own Github page, you will see a forked <strong>EDAV</strong> repo under the repositories section. Note, from now on, the term <strong>upstream repository</strong> refers to the original repo of the project that you forked and the term <strong>origin repository</strong> refers to the repo that you created or forked on Github. From your respective, both <strong>upstream</strong> and <strong>origin</strong> are remote repositories.
+<p>Let’s say you want to contribute to EDAV! Fork <a href="https://github.com/jtr13/EDAV" target="_blank">our GitHub repo</a> and then on your own GitHub page, you will see a forked <strong>EDAV</strong> repo under the repositories section. Note, from now on, the term <strong>upstream repository</strong> refers to the original repo of the project that you forked and the term <strong>origin repository</strong> refers to the repo that you created or forked on GitHub. From your respective, both <strong>upstream</strong> and <strong>origin</strong> are remote repositories.
 <img src="images/Git_step1.PNG" /></p>
 </div>
 <div id="step-2-clone-origin-and-create-a-local-repository-once" class="section level3 unnumbered">
@@ -749,6 +755,7 @@ function unhover(element) {
 <p>The purpose of this step is to specify the location of the upstream repository. It may not make sense to you at this moment, but soon it will become clear.</p>
 <p>To complete this step, type in the following command line:</p>
 <p><code>&gt; git remote add upstream &lt;upstream repo url&gt;</code></p>
+<p>Source: <a href="https://help.github.com/en/articles/configuring-a-remote-for-a-fork" target="_blank">Configuring a remote for a fork</a></p>
 </div>
 <div id="step-4-pull" class="section level3 unnumbered">
 <h3>Step 4: Pull</h3>
@@ -770,23 +777,32 @@ function unhover(element) {
 </div>
 <div id="step-6-submit-a-pull-request" class="section level3 unnumbered">
 <h3>Step 6: Submit a pull request</h3>
-<p>Now you are able to see the branch you have created on the Github page. The next step is to submit a pull request and the process is very similar to the process described in the <a href="contribute.html/github-only-walkthrough">GitHub only walkthrough</a>.</p>
+<p>Now you are able to see the branch you have created on the GitHub page. The next step is to submit a pull request and the process is very similar to the process described in the <a href="contribute.html#github-only-walkthrough">GitHub only walkthrough</a>.</p>
 </div>
-<div id="last-step-sync-local-master-with-upstream-master" class="section level3 unnumbered">
-<h3>Last Step: Sync local master with upstream master</h3>
-<p>Once the merge is accepted, you want to delete this branch since the upstream already contains all the changes you have made. To delete the branch on origin, you can simply use GitHub. To delete the branch locally, type the following in the terminal:</p>
+<div id="step-7-delete-the-branch" class="section level3 unnumbered">
+<h3>Step 7: Delete the branch</h3>
+<p>Once the merge is accepted, it’s good practice to delete this branch since the upstream already contains all the changes you have made. To delete the branch on origin, you can simply use GitHub. To delete the branch locally, type the following in the terminal:</p>
 <p><code>&gt; git branch -d branchname</code></p>
 <p>We also need to stop tracking the remote branch using the following Git command:</p>
 <p><code>&gt; git fetch -p</code>.</p>
-<p>Finally, let’s sync local master with upstream master by running these commands:</p>
+</div>
+<div id="step-8-sync-your-fork" class="section level3">
+<h3><span class="header-section-number">29.5.1</span> Step 8: Sync your fork</h3>
+<p>This should be done at the beginning of your next work session to make sure that the code you work on matches the version on GitHub.</p>
+<p>If it’s your repo, you can bring down the changes that were merged into origin/master with:</p>
+<p><code>&gt; git pull</code></p>
+<p>Note that the flow of new code is:</p>
+<p><strong>local branch –&gt; origin/branch –&gt; origin/master –&gt; local master</strong></p>
+<p>It’s important to remember to do this, because the next branch you create will be a copy of local master, and it needs to be up to date.</p>
+<p>If you’re working on someone else’s repo, make sure you’ve completed Step 3 above. Then, right before you start working again on the project, do the following to sync your fork:</p>
 <p><code>&gt; git fetch upstream</code></p>
 <p><code>&gt; git checkout master</code></p>
 <p><code>&gt; git merge upstream/master</code></p>
-<p>For more detailed description on each step in the Git workflow, please refer to workflow 4 in the Git slides <a href="https://github.com/jtr13/codehelp/blob/master/GitHubWorkflowPt2.pdf" target="_blank">Git/Github Workflow</a>.</p>
+<p>Source: <a href="https://help.github.com/en/articles/syncing-a-fork" target="_blank">Syncing a fork</a></p>
 </div>
 </div>
 <div id="other-resources" class="section level2">
-<h2><span class="header-section-number">29.5</span> Other resources</h2>
+<h2><span class="header-section-number">29.6</span> Other resources</h2>
 <div id="getting-help-1" class="section level3 unnumbered">
 <h3>Getting Help</h3>
 <p>If you’re lost, these might help.</p>
